--- a/config/content.htm
+++ b/config/content.htm
@@ -19,8 +19,8 @@
 <p style="padding-left: 30px;"><span>籃框架被配置在一定範圍內, 可隨機慢速前進、後退及左右擺動, 投籃機構系統帶有一定數量的籃球, 被配置在可自由移動的輪車上.</span></p>
 <p style="padding-left: 30px;"><span>操作者可利用鍵盤特定按鍵控制投籃輪車的移動並發射投籃, 每投出一球後系統透過記分板進行計分, 並由送球機構進行補球或移動輪車取球, 遊戲可進行至全部數量籃球投完為止.</span></p>
 <p>請將期末協同專案執行過程、內容與心得, 製作成影片，配合字幕上傳至 Youtube 後嵌入各階段的期末報告頁面中.</p>
-<p>影片標題: <span style="background-color: #ffff00;">國立虎尾科技大學 - 機械設計工程系 - cd2025 期末報告 - 學員學號 - 各階段影片主題<br/></span></p>
-<h1>list</h1><h1>task</h1>
+<p>影片標題: <span style="background-color: #ffff00;">國立虎尾科技大學 - 機械設計工程系 - cd2025 期末報告 - 學員學號 - 各階段影片主題</span></p>
+<h1>task</h1>
 <h2>task1</h2>
 <p><span>利用既有的 Python 可攜系統建立各版本的 Python 可攜環境。</span></p>
 <p><span><em><strong>1. </strong></em>下載 <a href="http://229.cycu.org/portable_python311.7z">portable_python311.7z</a>，一套尚未安裝 pip 的 Python 3.11 可攜程式環境。</span></p>
@@ -291,7 +291,8 @@ brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/
 <p>41223129</p>
 <p><a href="/downloads/41223132ex3-2.zip">41223132</a></p>
 <p>41223147</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/72YDoXhGhnE?si=WNCf8-x6WGd_AEak" title="YouTube video player" width="450"></iframe></p><h2>3-3video</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/72YDoXhGhnE?si=WNCf8-x6WGd_AEak" title="YouTube video player" width="450"></iframe></p>
+<h2>3-3video</h2>
 <p><a href="/downloads/41223147Exam3-3.7z">41223147Exam3-3.7z</a></p>
 <p>41223110</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/DospNNAiXM0?si=hZPowxaGDG6iRwRL" title="YouTube video player" width="560"></iframe></p>
@@ -300,13 +301,15 @@ brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/
 <p>41223129</p>
 <p><a href="/downloads/41223132 ex3-3.zip">41223132</a></p>
 <p>41223147</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/q20s75eIMEk?si=DvJXuVFIMumHTwhs" title="YouTube video player" width="450"></iframe></p><h2>Experience</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/q20s75eIMEk?si=DvJXuVFIMumHTwhs" title="YouTube video player" width="450"></iframe></p>
+<h2>Experience</h2>
 <p><span>41223110:</span></p>
 <p><span>41223125:</span></p>
 <p><span>一切都從模仿開始，在初期根本完全無從下手，只能到他人網站上觀摩，或從他人成品中找出發點，也又是完全沒有搞懂它的運作模式。在考試三中使用IPV6來進行webotsw --steam 內建的動態連結並以server端讓 client端連接後進行控制，一個伺服端可讓多個客戶端連接並在內部webotsw串流執行導入建模及程式的遠端線上控制，而在之中因為基本功不夠時常卡住不知該如何解決，連使用GPT得到文字敘述後也不清楚問題應該從何處解決，這種拋之心血卻無果的心情真的很無助。</span></p>
 <p><span>41223129:</span></p>
 <p><span>41223132:</span></p>
-<p><span>41223147:</span></p><h1>Brython</h1>
+<p><span>41223147:</span></p>
+<h1>Brython</h1>
 <p><button id="add1to100">1 add to 100</button></p>
 <!-- 導入 brython 程式庫 -->
 <p>
