--- a/content/Experience.html
+++ b/content/Experience.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li><a href='list.html'>list</a><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a><li><a href='task4.html'>task4</a><li><a href='task5.html'>task5</a></li></ul><li><a href='w3.html'>w3</a><li><a href='Exam1.html'>Exam1</a><li><a href='Exam2.html'>Exam2</a><li class='has-children'><a href='Exam3.html'>Exam3</a><ul class='dropdown'><li><a href='3-1video.html'>3-1video</a><li><a href='3-2video.html'>3-2video</a><li><a href='3-3video.html'>3-3video</a><li><a href='Experience.html'>Experience</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a><li><a href='task4.html'>task4</a><li><a href='task5.html'>task5</a></li></ul><li><a href='w3.html'>w3</a><li><a href='Exam1.html'>Exam1</a><li><a href='Exam2.html'>Exam2</a><li class='has-children'><a href='Exam3.html'>Exam3</a><ul class='dropdown'><li><a href='3-1video.html'>3-1video</a><li><a href='3-2video.html'>3-2video</a><li><a href='3-3video.html'>3-3video</a><li><a href='Experience.html'>Experience</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -148,7 +148,8 @@ img.add_border {
 <p><span>一切都從模仿開始，在初期根本完全無從下手，只能到他人網站上觀摩，或從他人成品中找出發點，也又是完全沒有搞懂它的運作模式。在考試三中使用IPV6來進行webotsw --steam 內建的動態連結並以server端讓 client端連接後進行控制，一個伺服端可讓多個客戶端連接並在內部webotsw串流執行導入建模及程式的遠端線上控制，而在之中因為基本功不夠時常卡住不知該如何解決，連使用GPT得到文字敘述後也不清楚問題應該從何處解決，這種拋之心血卻無果的心情真的很無助。</span></p>
 <p><span>41223129:</span></p>
 <p><span>41223132:</span></p>
-<p><span>41223147:</span></p><br />3-3video << <a href='3-3video.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<p><span>41223147:</span></p>
+<br />3-3video << <a href='3-3video.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
