--- a/content/Final.html
+++ b/content/Final.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li><a href='list.html'>list</a><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a><li><a href='task4.html'>task4</a><li><a href='task5.html'>task5</a></li></ul><li><a href='w3.html'>w3</a><li><a href='Exam1.html'>Exam1</a><li><a href='Exam2.html'>Exam2</a><li class='has-children'><a href='Exam3.html'>Exam3</a><ul class='dropdown'><li><a href='3-1video.html'>3-1video</a><li><a href='3-2video.html'>3-2video</a><li><a href='3-3video.html'>3-3video</a><li><a href='Experience.html'>Experience</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a><li><a href='task4.html'>task4</a><li><a href='task5.html'>task5</a></li></ul><li><a href='w3.html'>w3</a><li><a href='Exam1.html'>Exam1</a><li><a href='Exam2.html'>Exam2</a><li class='has-children'><a href='Exam3.html'>Exam3</a><ul class='dropdown'><li><a href='3-1video.html'>3-1video</a><li><a href='3-2video.html'>3-2video</a><li><a href='3-3video.html'>3-3video</a><li><a href='Experience.html'>Experience</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,15 +142,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='list.html'>Next</a> >> list<br /><h1>Final</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='task.html'>Next</a> >> task<br /><h1>Final</h1>
 <p><span>期末協同專案執行過程影片、簡報與 PDf 報告檔案 (六人一組) (30%)</span></p>
 <p><span>題目: <span style="background-color: #ccffcc;">Webots 動態投籃模擬系統的協同設計</span></span></p>
 <p><span>說明: </span></p>
 <p style="padding-left: 30px;"><span>籃框架被配置在一定範圍內, 可隨機慢速前進、後退及左右擺動, 投籃機構系統帶有一定數量的籃球, 被配置在可自由移動的輪車上.</span></p>
 <p style="padding-left: 30px;"><span>操作者可利用鍵盤特定按鍵控制投籃輪車的移動並發射投籃, 每投出一球後系統透過記分板進行計分, 並由送球機構進行補球或移動輪車取球, 遊戲可進行至全部數量籃球投完為止.</span></p>
 <p>請將期末協同專案執行過程、內容與心得, 製作成影片，配合字幕上傳至 Youtube 後嵌入各階段的期末報告頁面中.</p>
-<p>影片標題: <span style="background-color: #ffff00;">國立虎尾科技大學 - 機械設計工程系 - cd2025 期末報告 - 學員學號 - 各階段影片主題<br/></span></p>
-<br />About << <a href='About.html'>Previous</a> <a href='list.html'>Next</a> >> list</div>
+<p>影片標題: <span style="background-color: #ffff00;">國立虎尾科技大學 - 機械設計工程系 - cd2025 期末報告 - 學員學號 - 各階段影片主題</span></p>
+<br />About << <a href='About.html'>Previous</a> <a href='task.html'>Next</a> >> task</div>
         
     <!-- footer -->
       <div class="container">
